tests/ui/unexpected_after_map_entry.stderr
error: no rules expected the token `=>`
 --> tests/ui/unexpected_after_map_entry.rs:4:24
  |
4 |     plist!({ "k": true => });
  |                        ^^ no rules expected this token in macro call
  |
  = note: while trying to match end of macro
