tests/ui/unexpected_after_map_entry.rs
use plist::plist;

fn main() {
    plist!({ "k": true => });
}
